Fix z-index of dropdown

--- a/client/src/components/DropDown/dropDown.css
+++ b/client/src/components/DropDown/dropDown.css
@@ -20,7 +20,7 @@
   background-color: #F2F2F2;
   box-sizing: border-box;
   box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, 0.15);
-  z-index: 10;
+  z-index: 100;
 }
 
 .dropdown-option {
